# syndio_chat_app

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  codecov.yml  compose.yaml  deploy.bat  deploy.sh  message.py  pyproject.toml  requirements.txt  sample_deploy.bat  sample_deploy.sh
.github/workflows/: ci.yaml
ai/: base_ai.py  dummy_ai.py  gpt_4o_mini.py
config/: constants.py
db/: base_db.py  mongo_db.py
docs/: api_contract.md  design.md  kubernetes_deployment.md
k8s/: app-deployment.yaml  app_deployment.yaml  app_service.yaml  configmap.yaml  deployment.yaml  hpa.yaml  mongodb-deployment.yaml  service.yaml
models/: message.py
templates/: index.html
tests/: test_app.py  test_dummy_ai.py  test_gpt_4o_mini.py  test_mongo_db.py
utils/: log_utils.py  message_utils.py
