[project]
name = "syndio-assignment"
version = "0.1.0"
description = ""
authors = [
    {name = "Thomas Li",email = "thomas.tong.li@gmial.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "gunicorn (==20.1.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "app (>=0.0.1,<0.0.2)",
    "coverage (>=7.6.10,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
